io-hotmoka-examples/src/main/java/io/hotmoka/tests/errors/legalstaticinitialization1/C.java
package io.hotmoka.tests.errors.legalstaticinitialization1;

public class C {
	public final static int i = 13; // legal with final
}